--- a/nutriAN/package.json
+++ b/nutriAN/package.json
@@ -2,14 +2,42 @@
   "name": "nutrian",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react": "^5.1.2",
     "typescript": "~5.9.3",
     "vite": "^7.1.7"
-  }
+  },
+  "main": "index.js",
+  "dependencies": {
+    "@lottiefiles/lottie-player": "^2.0.12",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "esbuild": "^0.25.12",
+    "express": "^5.1.0",
+    "fdir": "^6.5.0",
+    "lottie-react": "^2.4.1",
+    "mysql2": "^3.15.3",
+    "nanoid": "^3.3.11",
+    "picocolors": "^1.1.1",
+    "picomatch": "^4.0.3",
+    "postcss": "^8.5.6",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-router-dom": "^7.9.6",
+    "rollup": "^4.52.5",
+    "source-map-js": "^1.2.1",
+    "tinyglobby": "^0.2.15"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
