--- a/nutriAN/tsconfig.json
+++ b/nutriAN/tsconfig.json
@@ -20,8 +20,8 @@
     "allowImportingTsExtensions": true,
     "noEmit": true,
 
-    "types": ["vite/client"]
+    "types": ["vite/client", "react", "react-dom"]
   },
-  "include": ["src"],
+  "include": ["src", "src/types/**/*.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
